Color contrast fix on resources headers

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,7 +52,7 @@ $browser-minimum-versions: (
 	h2 {
 		font-size: 1em;
 		font-style:italic;
-		color: #999;
+		color: #6a6a6a;
 		padding-top: 1em;
 	}
 	ul {
